Fixed post title

--- a/posts/post1_dev_ideas_1_handle_data_between_tabs_components/post.mdx
+++ b/posts/post1_dev_ideas_1_handle_data_between_tabs_components/post.mdx
@@ -1,6 +1,8 @@
 ---
-title: Dev Ideas #1: Handle data between tabs components
-tags: ReactJS, DevIdeas
+title: "Dev Ideas #1: Handle data between tabs components"
+tags: 
+   - ReactJS
+   - DevIdeas
 publishedOn: X
 lastUpdateOn: X
 ---
