--- a/projects/002_panorocrm/project.mdx
+++ b/projects/002_panorocrm/project.mdx
@@ -8,3 +8,14 @@ tags:
 description: "Real estate website optimized for speed and Googlebot"
 pinned: 1
 ---
+- complex application composed of many modules and services;
+- created mainly in Javascript (NodeJS and ReactJS) with some critical services
+in C++;
+- microservices architecture.
+
+PanoroCRM is a complex CRM with multiple modules for managing real estate
+offers, publish them to different real estate portals, create custom
+shareable websites with offers to be sent to the clients, add clients and keep
+track of them and their interests and see statistics about the activity done.
+
+
