Addded cover for web jobs

--- a/projects/002_panorocrm/project.mdx
+++ b/projects/002_panorocrm/project.mdx
@@ -1,6 +1,6 @@
 ---
 title: "PanoroCRM"
-image: "/imgs/projects/panoro.ro/cover.png"
+image: "/imgs/projects/panorocrm/cover.png"
 tags: 
   - NodeJS
   - ReactJS
