Modified some part of CV

--- a/projects/001_imocentral.ro/project.mdx
+++ b/projects/001_imocentral.ro/project.mdx
@@ -5,6 +5,7 @@ tags:
   - NextJS
 description: "Real estate website optimized for speed and for Googlebot"
 pinned: 1
+url: "https://imocentral.ro"
 ---
 - created using NextJS;
 - optimized for Googlebot;
