--- a/projects/002_panorocrm/project.mdx
+++ b/projects/002_panorocrm/project.mdx
@@ -7,7 +7,7 @@ tags:
   - C++
 description: "Real estate website optimized for speed and Googlebot"
 pinned: 1
-url: "https://crm.panoro.ro"
+url: "https://beta.crm.panoro.ro"
 ---
 - complex application composed of many modules and services;
 - created mainly in Javascript (NodeJS and ReactJS) with some critical services
