Fixed description for proect 005 - and-wedding-invitations

--- a/projects/005_and-wedding-invitations/project.mdx
+++ b/projects/005_and-wedding-invitations/project.mdx
@@ -4,9 +4,9 @@ coverImage: "/imgs/projects/005_and-wedding-invitations/image1.jpeg"
 tags: 
   - Go
   - SolidJS
-description: "Real estate ad vehicles aggregator portal"
+description: "Application for the guests to my wedding to confirm the participation and to select options"
 pinned: 1
-url: "https://www.laikado.es"
+url: ""
 otherImages:
   - "/imgs/projects/005_and-wedding-invitations/image2.jpeg"
   - "/imgs/projects/005_and-wedding-invitations/image3.jpeg"
